force-app/main/default/objects/Lead/fields/age__c.field-meta.xml
<CustomField>
    <fullName>age__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>