force-app/main/default/objects/Lead/fields/Allocation__c.field-meta.xml
<CustomField>
    <fullName>Allocation__c</fullName>
    <label>Allocation</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>