force-app/main/default/objects/Lead/fields/Auto_Convert__c.field-meta.xml
<CustomField>
    <fullName>Auto_Convert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a hidden field used in the automated-conversion process. Do not tick manually tick. Do not delete.</description>
    <inlineHelpText>This is a hidden field used in the automated-conversion process. Do not manually tick. Do not delete.</inlineHelpText>
    <label>Auto Convert</label>
    <type>Checkbox</type>
</CustomField>