force-app/main/default/objects/Lead/fields/Bag_or_bin_service__c.field-meta.xml
<CustomField>
    <fullName>Bag_or_bin_service__c</fullName>
    <description>What service are they interested in using</description>
    <label>Sacks or bin service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sacks</fullName>
            </value>
            <value>
                <fullName>Bins</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>