force-app/main/default/objects/Lead/fields/BID__c.field-meta.xml
<CustomField>
    <fullName>BID__c</fullName>
    <label>BID</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Better Bankside</fullName>
            </value>
            <value>
                <fullName>Blue Bermondsey</fullName>
            </value>
            <value>
                <fullName>Camden Town Unlimited</fullName>
            </value>
            <value>
                <fullName>EustonTown</fullName>
                <label>Euston Town</label>
            </value>
            <value>
                <fullName>Heart of London</fullName>
            </value>
            <value>
                <fullName>HOL2 (Piccadilly and St James)</fullName>
            </value>
            <value>
                <fullName>InStreatham</fullName>
            </value>
            <value>
                <fullName>InWestEaling</fullName>
            </value>
            <value>
                <fullName>KingstonFirst</fullName>
            </value>
            <value>
                <fullName>LoveWimbledon</fullName>
            </value>
            <value>
                <fullName>MakeItEaling</fullName>
                <label>Make it Ealing</label>
            </value>
            <value>
                <fullName>PaddingtonNow</fullName>
            </value>
            <value>
                <fullName>Station to Station</fullName>
            </value>
            <value>
                <fullName>Stratford Original</fullName>
            </value>
            <value>
                <fullName>Successful Sutton</fullName>
            </value>
            <value>
                <fullName>Team London Bridge</fullName>
            </value>
            <value>
                <fullName>The Fitzrovia Partnership</fullName>
            </value>
            <value>
                <fullName>ThisIsClapham</fullName>
                <label>This Is Clapham</label>
            </value>
            <value>
                <fullName>Vauxhall One</fullName>
            </value>
            <value>
                <fullName>Waterloo Quarter</fullName>
            </value>
            <value>
                <fullName>Your Bromley</fullName>
            </value>
            <value>
                <fullName>BeRichmond</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>