force-app/main/default/objects/Lead/fields/CampaignID__c.field-meta.xml
<CustomField>
    <fullName>CampaignID__c</fullName>
    <description>LINKEDIN DATA</description>
    <label>CampaignID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>