force-app/main/default/objects/Lead/fields/chatter_photo__c.field-meta.xml
<CustomField>
    <fullName>chatter_photo__c</fullName>
    <label>chatter photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>