force-app/main/default/objects/Lead/fields/Collection_frequency__c.field-meta.xml
<CustomField>
    <fullName>Collection_frequency__c</fullName>
    <description>How often is their waste collected</description>
    <label>Collection frequency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>