force-app/main/default/objects/Lead/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Notes</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>