force-app/main/default/objects/Lead/fields/Competitor_Score__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Score__c</fullName>
    <formula>If( Competitor__c != null,15,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>