force-app/main/default/objects/Lead/fields/contact_name__c.field-meta.xml
<CustomField>
    <fullName>contact_name__c</fullName>
    <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>contact name</label>
    <type>Text</type>
</CustomField>