force-app/main/default/objects/Lead/fields/Contact_today__c.field-meta.xml
<CustomField>
    <fullName>Contact_today__c</fullName>
    <description>Field team has marked this if the lead should be contacted today</description>
    <label>Contact today</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>