force-app/main/default/objects/Lead/fields/Council__c.field-meta.xml
<CustomField>
    <fullName>Council__c</fullName>
    <label>Council</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Westminster</fullName>
            </value>
            <value>
                <fullName>Islington</fullName>
            </value>
            <value>
                <fullName>Camden</fullName>
            </value>
            <value>
                <fullName>Hackney</fullName>
            </value>
            <value>
                <fullName>City of London</fullName>
            </value>
            <value>
                <fullName>Kensington and Chelsea</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Barking and Dagenham</fullName>
            </value>
            <value>
                <fullName>Barnet</fullName>
            </value>
            <value>
                <fullName>Bexley</fullName>
            </value>
            <value>
                <fullName>Brent</fullName>
            </value>
            <value>
                <fullName>Bromley</fullName>
            </value>
            <value>
                <fullName>Croydon</fullName>
            </value>
            <value>
                <fullName>Ealing</fullName>
            </value>
            <value>
                <fullName>Enfield</fullName>
            </value>
            <value>
                <fullName>Greenwich</fullName>
            </value>
            <value>
                <fullName>Hammersmith and Fulham</fullName>
            </value>
            <value>
                <fullName>Haringey</fullName>
            </value>
            <value>
                <fullName>Harrow</fullName>
            </value>
            <value>
                <fullName>Havering</fullName>
            </value>
            <value>
                <fullName>Hillingdon</fullName>
            </value>
            <value>
                <fullName>Kingston Upon Thames</fullName>
            </value>
            <value>
                <fullName>Lambeth</fullName>
            </value>
            <value>
                <fullName>Lewisham</fullName>
            </value>
            <value>
                <fullName>Merton</fullName>
            </value>
            <value>
                <fullName>Newham</fullName>
            </value>
            <value>
                <fullName>Redbridge</fullName>
            </value>
            <value>
                <fullName>Richmond</fullName>
            </value>
            <value>
                <fullName>Southwark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>