force-app/main/default/objects/Lead/fields/Creative__c.field-meta.xml
<CustomField>
    <fullName>Creative__c</fullName>
    <description>LINKEDIN DATA</description>
    <label>Creative</label>
    <length>100</length>
    <type>Text</type>
</CustomField>