force-app/main/default/objects/Lead/fields/Current_Energy_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Current_Energy_Supplier__c</fullName>
    <label>Current Energy Supplier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>