force-app/main/default/objects/Lead/fields/Current_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Current_Supplier__c</fullName>
    <label>Current Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Westminster Council</fullName>
            </value>
            <value>
                <fullName>Islington Council</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Tertiary</fullName>
            </value>
            <value>
                <fullName>Camden Council</fullName>
            </value>
            <value>
                <fullName>Lewisham</fullName>
            </value>
            <value>
                <fullName>Kensington and Chelsea Council</fullName>
            </value>
            <value>
                <fullName>City of London Council</fullName>
            </value>
            <value>
                <fullName>Hammersmith and Fulham Council</fullName>
            </value>
            <value>
                <fullName>Birmingham City Council</fullName>
            </value>
            <value>
                <fullName>Kingston Council</fullName>
            </value>
            <value>
                <fullName>Wandsworth Council</fullName>
            </value>
            <value>
                <fullName>Hackney Council</fullName>
            </value>
            <value>
                <fullName>Haringey Council</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>