force-app/main/default/objects/Lead/fields/currentcustomer__c.field-meta.xml
<CustomField>
    <fullName>currentcustomer__c</fullName>
    <description>Ticked current customer in website forms</description>
    <label>Current customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>customer</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>