force-app/main/default/objects/Lead/fields/customerdelete__c.field-meta.xml
<CustomField>
    <fullName>customerdelete__c</fullName>
    <label>customerdelete</label>
    <length>30</length>
    <type>Text</type>
</CustomField>