force-app/main/default/objects/Lead/fields/Electricity_Usage__c.field-meta.xml
<CustomField>
    <fullName>Electricity_Usage__c</fullName>
    <label>Electricity Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>