force-app/main/default/objects/Lead/fields/Email_Score__c.field-meta.xml
<CustomField>
    <fullName>Email_Score__c</fullName>
    <formula>IF(Email != null,15,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>