force-app/main/default/objects/Lead/fields/Estate__c.field-meta.xml
<CustomField>
    <fullName>Estate__c</fullName>
    <label>Estate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Estate</valueSetName>
    </valueSet>
</CustomField>