force-app/main/default/objects/Lead/fields/Field_Person__c.field-meta.xml
<CustomField>
    <fullName>Field_Person__c</fullName>
    <label>Field Person</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adam</fullName>
            </value>
            <value>
                <fullName>Tom</fullName>
            </value>
            <value>
                <fullName>Dan</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>