force-app/main/default/objects/Lead/fields/Field_Sales_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Field_Sales_FirstName__c</fullName>
    <label>Field Sales First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>