force-app/main/default/objects/Lead/fields/Field_Sales_LastName__c.field-meta.xml
<CustomField>
    <fullName>Field_Sales_LastName__c</fullName>
    <label>Field Sales Last Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>