force-app/main/default/objects/Lead/fields/Field_Sales_Score__c.field-meta.xml
<CustomField>
    <fullName>Field_Sales_Score__c</fullName>
    <formula>IF(Field_Sales_Visited__c &gt; NOW()-90 &amp;&amp; Field_Sales_Visited__c &lt;= NOW(),20,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Sales Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>