force-app/main/default/objects/Lead/fields/Field_Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Field_Sales_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Sales Team</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FieldSalesTeams</relationshipName>
    <type>Lookup</type>
</CustomField>