force-app/main/default/objects/Lead/fields/Field_Sales_Visited__c.field-meta.xml
<CustomField>
    <fullName>Field_Sales_Visited__c</fullName>
    <label>Field Sales Visited</label>
    <type>DateTime</type>
</CustomField>