force-app/main/default/objects/Lead/fields/fine_status__c.field-meta.xml
<CustomField>
    <fullName>fine_status__c</fullName>
    <label>fine status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>needs sales attention</fullName>
            </value>
            <value>
                <fullName>sent direct mail</fullName>
            </value>
            <value>
                <fullName>no fines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>