force-app/main/default/objects/Lead/fields/First_Order_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>First_Order_Payment_Method__c</fullName>
    <label>First Order Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account (Invoice)</fullName>
            </value>
            <value>
                <fullName>Credit/Debit Card</fullName>
            </value>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>