force-app/main/default/objects/Lead/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <description>LINKEDIN DATA</description>
    <label>Form</label>
    <length>100</length>
    <type>Text</type>
</CustomField>