force-app/main/default/objects/Lead/fields/Form_Submitted_Page__c.field-meta.xml
<CustomField>
    <fullName>Form_Submitted_Page__c</fullName>
    <label>Form Submitted Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>