force-app/main/default/objects/Lead/fields/gaconnector_City__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>