force-app/main/default/objects/Lead/fields/gaconnector_First_Click_Medium__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_First_Click_Medium__c</fullName>
    <label>First Click Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>