force-app/main/default/objects/Lead/fields/gaconnector_Time_Spent_on_Website_formul__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_Time_Spent_on_Website_formul__c</fullName>
    <formula>TEXT(ROUND(gaconnector_Time_Spent_on_Website__c / 60000,0)) &amp; &quot;:&quot; &amp; 
 TEXT(MOD(ROUND(gaconnector_Time_Spent_on_Website__c / 1000,0), 60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Spent on Website</label>
    <type>Text</type>
</CustomField>