force-app/main/default/objects/Lead/fields/Gas_Or_Electric__c.field-meta.xml
<CustomField>
    <fullName>Gas_Or_Electric__c</fullName>
    <label>Gas Or Electric</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electric Only</fullName>
            </value>
            <value>
                <fullName>Gas and Electric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>