force-app/main/default/objects/Lead/fields/Gas_Usage__c.field-meta.xml
<CustomField>
    <fullName>Gas_Usage__c</fullName>
    <label>Gas Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>