force-app/main/default/objects/Lead/fields/Gas_Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>Gas_Usage_Type__c</fullName>
    <label>Gas Usage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>kWh / Month</fullName>
            </value>
            <value>
                <fullName>kWh / Year</fullName>
            </value>
            <value>
                <fullName>Spend (£) / Month</fullName>
            </value>
            <value>
                <fullName>Spend (£) / Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>