force-app/main/default/objects/Lead/fields/hiddenpost__c.field-meta.xml
<CustomField>
    <fullName>hiddenpost__c</fullName>
    <formula>TRIM(LEFT(  PostalCode  , FIND(&quot; &quot;,  PostalCode )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hiddenpost</label>
    <type>Text</type>
</CustomField>