force-app/main/default/objects/Lead/fields/How_many_sacks_do_you_put_out__c.field-meta.xml
<CustomField>
    <fullName>How_many_sacks_do_you_put_out__c</fullName>
    <label>How many sacks do you put out</label>
    <length>50</length>
    <type>Text</type>
</CustomField>