force-app/main/default/objects/Lead/fields/How_often_is_your_recycling_and_waste_co__c.field-meta.xml
<CustomField>
    <fullName>How_often_is_your_recycling_and_waste_co__c</fullName>
    <label>How often is your recycling and waste co</label>
    <length>50</length>
    <type>Text</type>
</CustomField>