force-app/main/default/objects/Lead/fields/I_put_my_bags_out_at__c.field-meta.xml
<CustomField>
    <fullName>I_put_my_bags_out_at__c</fullName>
    <label>I put my bags out at</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01:00</fullName>
            </value>
            <value>
                <fullName>02:00</fullName>
            </value>
            <value>
                <fullName>03:00</fullName>
            </value>
            <value>
                <fullName>04:00</fullName>
            </value>
            <value>
                <fullName>05:00</fullName>
            </value>
            <value>
                <fullName>06:00</fullName>
            </value>
            <value>
                <fullName>07:00</fullName>
            </value>
            <value>
                <fullName>08:00</fullName>
            </value>
            <value>
                <fullName>09:00</fullName>
            </value>
            <value>
                <fullName>10:00</fullName>
            </value>
            <value>
                <fullName>11:00</fullName>
            </value>
            <value>
                <fullName>12:00</fullName>
            </value>
            <value>
                <fullName>13:00</fullName>
            </value>
            <value>
                <fullName>14:00</fullName>
            </value>
            <value>
                <fullName>15:00</fullName>
            </value>
            <value>
                <fullName>16:00</fullName>
            </value>
            <value>
                <fullName>17:00</fullName>
            </value>
            <value>
                <fullName>18:00</fullName>
            </value>
            <value>
                <fullName>19:00</fullName>
            </value>
            <value>
                <fullName>20:00</fullName>
            </value>
            <value>
                <fullName>21:00</fullName>
            </value>
            <value>
                <fullName>22:00</fullName>
            </value>
            <value>
                <fullName>23:00</fullName>
            </value>
            <value>
                <fullName>24:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>