force-app/main/default/objects/Lead/fields/Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Interested_In__c</fullName>
    <label>Interested In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Easy Recycling Sack</fullName>
            </value>
            <value>
                <fullName>Low-cost Rubbish Sack</fullName>
            </value>
            <value>
                <fullName>IT &amp; Electronics</fullName>
            </value>
            <value>
                <fullName>Battery Recycling</fullName>
            </value>
            <value>
                <fullName>Confidential Destruction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>