force-app/main/default/objects/Lead/fields/Is_a_member_of_a_partnership__c.field-meta.xml
<CustomField>
    <fullName>Is_a_member_of_a_partnership__c</fullName>
    <label>Is a member of a partnership?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>