force-app/main/default/objects/Lead/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <formula>If(  OR(ISPICKVAL(Type__c, &apos;0800&apos;),ISPICKVAL(Type__c, &apos;Website&apos;),ISPICKVAL(Type__c, &apos;Email&apos;),ISPICKVAL(Type__c, &apos;Freepost&apos;)),100,(Email_Score__c +  Competitor_Score__c +  Field_Sales_Score__c + Level_Of_Interest_Score__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>