force-app/main/default/objects/Lead/fields/Lead_Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_URL__c</fullName>
    <label>Lead Source URL</label>
    <type>Url</type>
</CustomField>