force-app/main/default/objects/Lead/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <description>LINKEDIN DATA</description>
    <label>Lead Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>