force-app/main/default/objects/Lead/fields/Level_Of_Interest_Score__c.field-meta.xml
<CustomField>
    <fullName>Level_Of_Interest_Score__c</fullName>
    <formula>Level_of_Interest__c  * 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level Of Interest Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>