force-app/main/default/objects/Lead/fields/map_email__c.field-meta.xml
<CustomField>
    <fullName>map_email__c</fullName>
    <formula>Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>map email</label>
    <type>Text</type>
</CustomField>