force-app/main/default/objects/Lead/fields/map_phone__c.field-meta.xml
<CustomField>
    <fullName>map_phone__c</fullName>
    <formula>Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>map phone</label>
    <type>Text</type>
</CustomField>