force-app/main/default/objects/Lead/fields/MPAN__c.field-meta.xml
<CustomField>
    <fullName>MPAN__c</fullName>
    <label>MPAN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>