force-app/main/default/objects/Lead/fields/MPRN__c.field-meta.xml
<CustomField>
    <fullName>MPRN__c</fullName>
    <label>MPRN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>