force-app/main/default/objects/Lead/fields/No_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>No_of_Locations__c</fullName>
    <defaultValue>&quot;1&quot;</defaultValue>
    <label>No. of Locations</label>
    <length>100</length>
    <type>Text</type>
</CustomField>