force-app/main/default/objects/Lead/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Field Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>